YUK-4771 fix cbc inventory report.
converted to a real ip address.